完善用户查询
