# internal/core/resource/user_resource.go
@@ -1,6 +1,9 @@
 package resource
 
 import (
+	"net/http"
+	"strconv"
+
 	"go.uber.org/zap"
 
 	"github.com/gin-gonic/gin"
@@ -25,24 +28,53 @@ func NewUserResource(log *zap.Logger, data *data.Data, userUsecase *biz.UserUsec
 // newUser 新增用户
 // @Summary 新增用户
 // @Schemes
-// @Description 新增用户
+// @Description 根据用户名、密码、昵称、姓名创建新用户, 其中用户名、密码为必填、其他为可选项
 // @Tags User
-// @Param createUserReqData body biz.User true "user info"
+// @Param CreateUserCommand body biz.CreateUserCommand true "用户信息"
 // @Accept json
 // @Produce json
-// @Success 200 {string} string	"ok"
+// @Success 201 {object} errors.Error "success"
 // @Router /users [post]
 // @Security ApiKeyAuth
 func (u *UserResource) newUser(ctx *gin.Context) {
-	var user biz.User
-	err := ctx.BindJSON(&user)
+	var cmd biz.CreateUserCommand
+	err := ctx.BindJSON(&cmd)
 	if err != nil {
 		u.log.Error("fail to get user data", zap.Error(err))
 	}
-	u.userUsecase.New(ctx, &user)
-	ctx.JSON(200, []string{"OK"})
+	u.userUsecase.New(ctx, &cmd)
+	ctx.JSON(http.StatusCreated, errors.OK())
 }
 
+// newUser 更新用户
+// @Summary 更新用户
+// @Schemes
+// @Description 更新用户信息 姓名、昵称、头像
+// @Tags User
+// @Param id path uint32 true "use id"
+// @Param UpdateUserCommand body biz.UpdateUserCommand true "用户信息"
+// @Accept json
+// @Produce json
+// @Success 200 {object} errors.Error "success"
+// @Router /users/{id} [patch]
+// @Security ApiKeyAuth
+func (u *UserResource) updateUser(ctx *gin.Context) {
+	userId, err := strconv.Atoi(ctx.Param("id"))
+
+	if err != nil {
+		ctx.JSON(400, biz.ErrUserIdInvalid)
+	}
+	var cmd biz.UpdateUserCommand
+	err = ctx.BindJSON(&cmd)
+	if err != nil {
+		u.log.Error("fail to get user data", zap.Error(err))
+	}
+	(&cmd).UserId = uint32(userId)
+	u.userUsecase.UpdateUser(ctx, &cmd)
+	ctx.JSON(http.StatusCreated, errors.OK())
+}
+
+// ListUserResp 分页查询用户响应数据
 type ListUserResp struct {
 	errors.Error
 	Data types.Page[*biz.User]
@@ -53,15 +85,20 @@ type ListUserResp struct {
 // @Schemes
 // @Description 分页查询用户
 // @Tags User
-// @Param "query params" query biz.ListUserReq true "query params"
 // @Accept json
 // @Produce json
-// @Success 200 {object}  biz.ListUserReq
+// @Param "query params" query biz.ListUserQuery true "query params"
+// @Success 200 {object}  types.ResponseEntity[types.Page[biz.User]]
 // @Router /users [get]
 // @Security ApiKeyAuth
 func (u *UserResource) listUser(ctx *gin.Context) {
-	var queryParams biz.ListUserReq
+	var queryParams biz.ListUserQuery
+	// default offset = 0, limit = 10
+	// queryParams.SetDefault()
 	ctx.BindQuery(&queryParams)
+	if queryParams.Limit == 0 {
+		(&queryParams).SetDefault()
+	}
 	u.log.Debug("query params", zap.Any("params", queryParams))
 
 	page, err := u.userUsecase.ListUser(ctx, &queryParams)
@@ -69,5 +106,5 @@ func (u *UserResource) listUser(ctx *gin.Context) {
 		u.log.Error("fail to get user data", zap.Error(err))
 		return
 	}
-	ctx.JSON(200, ListUserResp{Data: *page, Error: errors.OK()})
+	ctx.JSON(200, types.NewResponseEntity(errors.OK(), page))
 }
